--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://lazyasa.github.com
 title: Asa's lab 
-subtitle: A blogging framework for hackers.
+subtitle: 程式玩樂紀錄
 author: Asa 
 simple_search: http://google.com/search
 description:
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: lazyasa
 twitter_tweet_button: true
 
 # Google +1
@@ -89,7 +89,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-39500449-1
 
 # Facebook Like
-facebook_like: false
+facebook_like: true 
